# WaveBox

./: CMakeLists.txt  build.sh
include/glm/: CMakeLists.txt
include/vulkan/vulkan/: vulkan_core.h
libs/vulkan/: libSPIRV-Tools-shared.dylib  libVkLayer_device_simulation.dylib  libVkLayer_khronos_synchronization2.dylib
libs/vulkan/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  vulkan.pc
resources/shaders/: compile.sh  shaderwatcher.sh
resources/shaders/GLSL/: .OceanCompute.glsl.swp  .OceanFragment.glsl.swp  .OceanTessellationControl.glsl.swp  .OceanTessellationEvaluation.glsl.swp  .OceanVertex.glsl.swp  DepthFragment.glsl  DepthVertex.glsl  EnvFragment.glsl  EnvVertex.glsl  MeshFragment.glsl  MeshTessellationControl.glsl  MeshTessellationEvaluation.glsl  MeshVertex.glsl  OceanCompute.glsl  OceanFragment.glsl  OceanPropertyCompute.glsl  OceanShoalingCompute.glsl  OceanTessellationControl.glsl  OceanTessellationEvaluation.glsl  OceanVertex.glsl  UIFragment.glsl  UIVertex.glsl
resources/shaders/SPIRV/: oceancomp.spv  oceanfrag.spv  oceantesc.spv  oceantese.spv  oceanvert.spv
src/: .GraphicsHandler.cpp.swp  .GraphicsHandler.h.swp  .Ocean.cpp.swp  .Ocean.h.swp  .main.cpp.swp  :  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  GraphicsHandler.cpp  GraphicsHandler.h  Mesh.cpp  Mesh.h  Ocean.cpp  Ocean.h  Scene.cpp  Scene.h  UI.cpp  UI.h  UIHandler.cpp  UIHandler.h  main.cpp
